references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/Variability_invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:d5db354ac2abc64f4aa52defa279f5e424f67de8527c84aa5a91673ea2b1e9ef
size 2693
